wiki/src/donate.css
.sidebar {
  display: none;
}

.parentlinks {
  display: block;
  height: 2.4em;
}

.parentlinks ul {
  display: none;
}

span.title {
  margin-top: 0;
}

.pageheader .actions {
  top: 10px;
}

.pageheader #otherlanguages {
  top: 41px;
}

/* Left part */

#feature h2 {
  font-size: 24px;
  font-style: italic;
  margin-bottom: 1em;
  margin-top: 0;
}

#feature h3 {
  font-size: 20px;
  font-style: italic;
  margin-bottom: 1em;
  text-transform: none;
  letter-spacing: 0;
}

#feature p {
  font-size: 16px;
  line-height: 1.5em;
}

/* Hide version with JavaScript by default */

#paypal-with-js {
  display: none;
}

/* JavaScript version */

#currency .col-md-12, #frequency .col-md-12 {
  margin-bottom: 1em;
  padding: 0;
  border: solid 3px white;
}

#donate-button .col-md-12 {
  margin-top: 1em;
  border: solid 3px white;
}

.btn-primary {
  background-color: #56347c !important;
  border-color: #492c69 !important;
}

.btn-primary.active, .btn-primary:hover {
  background-color: #3a2354 !important;
  border-color: #271838 !important;
}

.btn-primary.active:hover {
  background-color: #271838 !important;
  border-color: #040205 !important;
}

#require-paypal, .tax-deducible {
  padding: 0 4px;
}

#require-paypal {
  font-size: 12px;
  font-style: italic;
}

.tax-deducible {
  font-size: 12px;
  margin-top: 9px;
}

#other-ways, #expenses {
  margin-top: 5em;
}

.amounts .btn {
  padding-top: 33px;
  height: 95px;
  border: solid 3px white !important;
}

.amounts .other {
  padding: 13px 4px;
}

.amounts .other .input-group-addon {
  padding: 2px;
}

.amounts .other .form-control {
  padding: 4px;
}

/* Version without JavaScript */

#paypal-without-js h2 {
  font-size: 24px;
  margin-top: 0;
}

#paypal-without-js h3 {
  font-size: 14px;
}

#paypal-without-js form {
  margin-bottom: 1em;
}

#paypal-without-js form label {
  font-size: 13px;
  margin-left: 0.5em;
  margin-right: 0.5em;
}

/* Other ways */

#flattr a {
  padding-right: 0 !important;
  background: none !important;
}

